--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/DefaultStyle.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/DefaultStyle.xaml
@@ -3,6 +3,13 @@
                     xmlns:local="clr-namespace:FoodGiantFlyerGenerator">
     <Style TargetType="Label" x:Key="LblStyle">
         <Setter Property="FontSize" Value="14"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    <Style TargetType="Label" x:Key="LblHeaderStyle">
+        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
     </Style>
     <Style TargetType="TextBox" x:Key="TxtBoxStyle">
         <Setter Property="FontSize" Value="14"/>
@@ -15,5 +22,11 @@
     <Style TargetType="ComboBox" x:Key="CmboBoxStyle">
         <Setter Property="Height" Value="30"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
+    </Style>
+    <Style TargetType="CheckBox" x:Key="ChckBoxStyle">
+        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 </ResourceDictionary>
